test/compile_errors/err_todo_too_many_args.w
//! expect-check-fail: todo() expects zero or one message argument

fn main:
    todo("first", "second")
